2003-10-15  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0alpha2 (alpha1 was dead in the water).

2003-10-15  Brian Warner  <warner@lothar.com>

	* setup.py: remove cReactor/ to the sandbox. Closes issue318.

2003-10-14  Itamar Shtull-Trauring  <itamar@sheriffpony>

	* twisted/web/static.py: registry no longer has support for
	getting services based on their interfaces.

2003-10-14  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0alpha1.

2003-10-13  Bob Ippolito  <bob@redivi.com>

	* doc/howto/choosing-reactor.xhtml:
	Added cfreactor/Cocoa information.

	* doc/examples/cocoaDemo:
	Removed, replaced by doc/examples/Cocoa cfreactor demos.

	* doc/examples/Cocoa:
	Moved from sandbox/etrepum/examples/PyObjC, cleaned up.

	* twisted/internet/cfsupport, twisted/internet/cfreactor.py:
	Moved from sandbox/etrepum, cleaned up.

	* twisted/application/app.py:
	Added 'cf' -> twisted.internet.cfreactor to reactorTypes

	* setup.py:
	sys.platform=='darwin' - build cfsupport, do not build cReactor.

	* INSTALL:
    Changed URL of pimp repository to shorter version.

2003-10-12  Jp Calderone  <exarkun@twistedmatrix.com>

	* bin/tktwistd, twisted/scripts/tktwistd.py, doc/man/tktwistd.1:
	Removed.

2003-10-12  Itamar Shtull-Trauring  <itamar@sheriffpony>

	* twisted/spread/pb.py: Perspective Broker no longer sends
	detailed tracebacks over the wire unless the "unsafeTracebacks"
	attribute is set of the factory.

2003-10-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* setup.py, twisted/test/test_dir.py, twisted/python/_c_dir.c:
	Removed _c_dir extension module for portability and maintenance
	reasons.

2003-10-03  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/spread/util.py twisted/test/test_spread.py: Fix issue
	286

2003-10-01  Brian Warner  <warner@lothar.com>

	* twisted/web/client.py (HTTPDownloader): accept either a filename
	or a file-like object (it must respond to .write and .close, and