@@ -1,3 +1,11 @@
+2003-10-15  Brian Warner  <warner@lothar.com>
+
+	* twisted/internet/defer.py: add some optional debug code, enabled
+	with defer.Deferred.debug=True . If active, it will record a stack
+	trace when the Deferred is created, and another when it is first
+	invoked. AlreadyCalledErrors will be given these two stack traces,
+	making it slightly easier to find the source of the problem.
+
 2003-10-15  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.1.0alpha2 (alpha1 was dead in the water).
